platform/exports/default/deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2025-12-01T21:34:47Z"
    generation: 1
    labels:
      app: hello-node
    name: hello-node
    namespace: default
    resourceVersion: "6117768"
    uid: cda06028-b134-4afc-b6c3-350189650967
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: hello-node
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: hello-node
      spec:
        containers:
        - command:
          - /agnhost
          - netexec
          - --http-port=8080
          image: registry.k8s.io/e2e-test-images/agnhost:2.53
          imagePullPolicy: IfNotPresent
          name: agnhost
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2025-12-01T21:34:58Z"
      lastUpdateTime: "2025-12-01T21:34:58Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2025-12-01T21:34:48Z"
      lastUpdateTime: "2025-12-01T21:34:58Z"
      message: ReplicaSet "hello-node-5dfbcb764b" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"whoami-deployment","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"whoami"}},"template":{"metadata":{"labels":{"app":"whoami"}},"spec":{"containers":[{"image":"traefik/whoami:v1.10","name":"whoami","ports":[{"containerPort":80}]}]}}}}
    creationTimestamp: "2025-10-24T10:56:00Z"
    generation: 2
    name: whoami-deployment
    namespace: default
    resourceVersion: "82272"
    uid: d361f58b-acc8-4240-bba3-0bf8d39c7c20
  spec:
    progressDeadlineSeconds: 600
    replicas: 3
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: whoami
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: whoami
      spec:
        containers:
        - image: traefik/whoami:v1.10
          imagePullPolicy: IfNotPresent
          name: whoami
          ports:
          - containerPort: 80
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 3
    conditions:
    - lastTransitionTime: "2025-10-24T10:56:00Z"
      lastUpdateTime: "2025-10-24T10:56:02Z"
      message: ReplicaSet "whoami-deployment-85f6bb67d6" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2025-10-24T16:06:16Z"
      lastUpdateTime: "2025-10-24T16:06:16Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 2
    readyReplicas: 3
    replicas: 3
    updatedReplicas: 3
kind: List
metadata:
  resourceVersion: ""
