platform/exports/default/ingressroutes.yaml
apiVersion: v1
items:
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"hello-node-http","namespace":"default"},"spec":{"entryPoints":["web"],"routes":[{"kind":"Rule","match":"Host(`hello.kwiki.it.com`)","middlewares":[{"name":"redirect-to-https"}],"services":[{"name":"hello-node","port":8080}]}]}}
    creationTimestamp: "2025-12-01T22:06:59Z"
    generation: 2
    name: hello-node-http
    namespace: default
    resourceVersion: "6124528"
    uid: 639d8fa2-cc3e-4bd5-b2fd-5ddd419a9aa9
  spec:
    entryPoints:
    - web
    routes:
    - kind: Rule
      match: Host(`hello.kwiki.it.com`)
      middlewares:
      - name: redirect-to-https
      services:
      - name: hello-node
        port: 8080
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"hello-node-https","namespace":"default"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`hello.kwiki.it.com`)","services":[{"name":"hello-node","port":8080}]}],"tls":{"certResolver":"le"}}}
    creationTimestamp: "2025-12-01T22:17:09Z"
    generation: 3
    name: hello-node-https
    namespace: default
    resourceVersion: "6126031"
    uid: 7e7d8573-02c0-4091-8d92-022654885110
  spec:
    entryPoints:
    - websecure
    routes:
    - kind: Rule
      match: Host(`hello.kwiki.it.com`)
      services:
      - name: hello-node
        port: 8080
    tls:
      certResolver: le
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"whoami-http","namespace":"default"},"spec":{"entryPoints":["web"],"routes":[{"kind":"Rule","match":"Host(`whoami.xn--cyberlnx-ykb.com`)","middlewares":[{"name":"redirect-to-https"}],"services":[{"name":"whoami-service","port":80}]}]}}
    creationTimestamp: "2025-10-24T10:56:00Z"
    generation: 1
    name: whoami-http
    namespace: default
    resourceVersion: "53937"
    uid: 0083084c-9023-4f2d-8c24-45a6bff64225
  spec:
    entryPoints:
    - web
    routes:
    - kind: Rule
      match: Host(`whoami.xn--cyberlnx-ykb.com`)
      middlewares:
      - name: redirect-to-https
      services:
      - name: whoami-service
        port: 80
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"whoami-https","namespace":"default"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`whoami.xn--cyberlnx-ykb.com`)","services":[{"name":"whoami-service","port":80}]}],"tls":{"certResolver":"le"}}}
    creationTimestamp: "2025-10-24T10:56:00Z"
    generation: 1
    name: whoami-https
    namespace: default
    resourceVersion: "53941"
    uid: e8da2f3d-c52c-4738-9566-9d244aa58fc4
  spec:
    entryPoints:
    - websecure
    routes:
    - kind: Rule
      match: Host(`whoami.xn--cyberlnx-ykb.com`)
      services:
      - name: whoami-service
        port: 80
    tls:
      certResolver: le
kind: List
metadata:
  resourceVersion: ""
